--- a/Login/Login.css
+++ b/Login/Login.css
@@ -21,9 +21,19 @@ body
     background: #23242a; 
 }
 
-p
+
+.box form h2
+/* É o "Login" */ /* */
 {
-    justify-content: center;
+    font-style: oblique;
+    color: #fff;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 0.1em; 
+}
+
+h3
+{
     color: #2732ff;
     margin: 0;
     padding: 0;
@@ -52,7 +62,7 @@ p
     width: 380px;
     height: 420px;
     background: linear-gradient(0deg, transparent
-    , transparent, #0000ff, #00ff7f, #00ff7f);
+    , transparent, #0000ff, #ff007f, #ff007f);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -71,7 +81,7 @@ p
     width: 380px;
     height: 420px;
     background: linear-gradient(0deg, transparent
-    , transparent, #00ff7f, #0000ff, #0000ff);
+    , transparent, #ff007f, #0000ff, #0000ff);
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -95,7 +105,7 @@ p
     width: 380px;
     height: 420px;
     background: linear-gradient(0deg, transparent
-    , transparent, #0000ff, #00ff7f, #00ff7f);
+    , transparent, #0000ff, #ff007f , #ff007f );
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -113,7 +123,7 @@ p
     width: 380px;
     height: 420px;
     background: linear-gradient(0deg, transparent
-    , transparent, #00ff7f, #0000ff, #0000ff);
+    , transparent, #ff007f, #0000ff, #0000ff); /* verde 00ff7f */
     z-index: 1;
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -147,16 +157,6 @@ p
     flex-direction: column;
 }
 
-.box form h2
-/* É o "Login" */
-{
-    font-style: oblique;
-    color: #fff;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 0.1em;
-    
-}
 
 .box form .inputbox
 {
@@ -222,10 +222,11 @@ p
 {
     height: 40px;
 }
-box form .Links
+
+.box form .Links
 {
-    display: flex;
-    justify-content: space-between;
+    display: center;
+    justify-content: center;
 }
 
 .box form .Links a
@@ -233,19 +234,21 @@ box form .Links
 
 {
     margin: auto;
-    width: 50%;
-    font-size: 0.75em;
+    font-size: 0.85em;
     color: aqua;
     text-decoration: none;
-    padding: center;
-    
+    text-align: center;
+    justify-content: center;
 }
 
 .box form .Links a:hover,
 .box form .Links a:nth-child(2)
 {
     color: #ff009d;
+    
 }
+
+
 .box form input[type="submit"]
 /* Botão de Login */
 
@@ -258,9 +261,12 @@ cursor: pointer;
 font-size: 0.9em;
 border-radius: 4px;
 font-weight: 600;
-width: 100px;
-margin-top: 10px
+width: 170px;
+margin-top: 10px;
+justify-content: center;
+
 }
+
 .box form input[type="submit"]:active
 {
     opacity: 0.5;
