--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -18,19 +18,28 @@ body{
     
 }
 
-img{
-    position: center;
-    margin:100px;
 
-}
 
 body
 {
+        /*display: flex;
+        width: 100%;
+        height: 100vh;
+        padding: 100px 0;
+        color: white;
+        background: url('../img/template.jpg') no-repeat bottom center scroll;
+        background-position: 30% 45%;
+        background-size: cover;*/
+
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-image: url("../img/template.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     align-content: center;
 }
 
