--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -22,20 +22,15 @@ body{
 
 body
 {
-        /*display: flex;
-        width: 100%;
-        height: 100vh;
-        padding: 100px 0;
-        color: white;
-        background: url('../img/template.jpg') no-repeat bottom center scroll;
-        background-position: 30% 45%;
-        background-size: cover;*/
-
+        
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("../img/template.jpg");
+    background-image: url("../img/Fundo\ Programação.gif");
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0.6;
+    /*background-color: #000;  /*343434*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -69,7 +64,7 @@ h3
     position: relative;
     width: 380px;
     height: 500px;
-    background: #0000;
+    background: #343434;
     border-radius: 8px;
     overflow: hidden;
 }
@@ -243,7 +238,7 @@ h3
 .box form .inputbox input:valid ~ i,
 .box form .inputbox input:focus ~ i
 {
-    height: 40px;
+    height: 45px;
 }
 
 .box form .Links
