--- a/login/style.css
+++ b/login/style.css
@@ -1,14 +1,25 @@
+body{
+  background-color:#1b1b1e;
+}
+
+
+/* The link (whith or whithout “hover”) is for “Esqueceu sua senha?” */
 .link {
     color: #c4c3ca;
   }
+
   .link:hover {
     color: #ffeba7;
   }
+
+/* The “Esqueceu sua senha?” */
   p {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.7;
   }
+
+/* The words “Cadastro” and “Login” inside the box “”*/
   h4 {
     width: 85%;
     margin-bottom: 60px;
@@ -17,7 +28,9 @@
     text-transform: uppercase;
     color: #ffeba7;
   }
-  h6 span{
+
+/* The words “Cadastro” and “Login” outside the box */
+  h2 span{
     padding: 0 20px;
     text-transform: uppercase;
     font-weight: 700;
@@ -25,15 +38,21 @@
     align-items: center;
     justify-content: center;
   }
+
+/*The div of the whole body*/
   .section{
     position: relative;
     width: 100%;
     display: block;
     font-size: 15px;
   }
+
+
   .full-height{
     min-height: 100vh;
   }
+
+
   .center-box{
       width: 100vh;
       display: flex;
@@ -41,11 +60,15 @@
       align-items: center;
       margin: 0 25vh;
   }
+
+
   [type="checkbox"]:checked,
   [type="checkbox"]:not(:checked){
     position: absolute;
     left: -9999px;
   }
+
+
   .checkbox:checked + label,
   .checkbox:not(:checked) + label{
     position: relative;
@@ -59,6 +82,8 @@
     cursor: pointer;
     background-color: #ffeba7;
   }
+
+
   .checkbox:checked + label:before,
   .checkbox:not(:checked) + label:before{
     position: absolute;
@@ -77,10 +102,13 @@
     font-size: 24px;
     transition: all 0.5s ease;
   }
+
+
   .checkbox:checked + label:before {
     transform: translateX(44px) rotate(-270deg);
   }
-  
+
+
   
   .card-3d-wrap {
     position: relative;
@@ -92,6 +120,8 @@
     perspective: 800px;
     margin-top: 60px;
   }
+
+
   .card-3d-wrapper {
     width: 100%;
     height: 100%;
@@ -102,6 +132,8 @@
     transform-style: preserve-3d;
     transition: all 600ms ease-out; 
   }
+
+
   .card-front, .card-back {
     width: 100%;
     height: 100%;
@@ -121,12 +153,18 @@
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
   }
+
+
   .card-back {
     transform: rotateY(180deg);
   }
+
+
   .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
     transform: rotateY(180deg);
   }
+
+
   .center-wrap{
     position: absolute;
     width: 100%;
@@ -137,6 +175,8 @@
     z-index: 20;
     display: block;
   }
+
+
   
   
   .form-group{ 
@@ -145,6 +185,8 @@
       margin: 10px 0;
       padding: 0;
   }
+
+
   .form-style {
     display: flex;
     padding: 13px 20px;
@@ -164,17 +206,23 @@
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
   }
+
+
   .msg-error{
     text-align: center;
     color: goldenrod;  
     font-size: 14px;
   }
+
+
   .form-style:focus,
   .form-style:active {
     border: none;
     outline: none;
     box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
   }
+
+
   .input-icon {
     position: absolute;
     top: 0;
@@ -187,6 +235,8 @@
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   
   .form-group input:-ms-input-placeholder  {
     color: #c4c3ca;
@@ -194,44 +244,60 @@
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input::-moz-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input:-moz-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input::-webkit-input-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input:focus:-ms-input-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input:focus::-moz-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input:focus:-moz-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   .form-group input:focus::-webkit-input-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
+
+
   
   .btn{  
     border-radius: 4px;
@@ -262,17 +328,23 @@
     color: #102770;
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   }
+
+
   .btn:active,
   .btn:focus{  
     background-color: #102770;
     color: #ffeba7;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
+
+
   .btn:hover{  
     background-color: #102770;
     color: #ffeba7;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
+
+
   
   .logo {
       position: absolute;
@@ -282,8 +354,12 @@
       z-index: 100;
       transition: all 250ms linear;
   }
-  .logo img {
+
+
+ /* .logo img {
       height: 26px;
       width: auto;
       display: block;
   }
+  
+  */
