--- a/login/style.css
+++ b/login/style.css
@@ -9,7 +9,7 @@ body{
   }
 
   .link:hover {
-    color: #ffeba7;
+    color: #9a27f7;
   }
 
 /* The “Esqueceu sua senha?” */
@@ -26,7 +26,7 @@ body{
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
-    color: #ffeba7;
+    color: #01c4e7;
   }
 
 /* The words “Cadastro” and “Login” outside the box */
@@ -80,7 +80,7 @@ body{
     padding: 0;
     margin: 10px auto;
     cursor: pointer;
-    background-color: #ffeba7;
+    background-color: #000;
   }
 
 
@@ -91,8 +91,8 @@ body{
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    color: #ffeba7;
-    background-color: #102770;
+    color: #1b1b1e;
+    background-color: #39ff14;
     content: url(../img/arrow-up-left.svg);
     z-index: 20;
     top: -10px;
@@ -210,7 +210,7 @@ body{
 
   .msg-error{
     text-align: center;
-    color: goldenrod;  
+    color: #39ff14;  
     font-size: 14px;
   }
 
@@ -231,7 +231,7 @@ body{
     font-size: 24px;
     line-height: 73px;
     text-align: left;
-    color: #ffeba7;
+    color: #39ff14;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
   }
@@ -306,7 +306,7 @@ body{
     font-weight: 600;
     text-transform: uppercase;
     -webkit-transition : all 200ms linear;
-    transition: all 200ms linear;
+    transition: all 400ms linear;
     padding: 0 30px;
     margin: 10px 25px;
     letter-spacing: 1px;
@@ -324,23 +324,23 @@ body{
     -ms-flex-pack: center;
     text-align: center;
     border: none;
-    background-color: #ffeba7;
-    color: #102770;
-    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+    background-color: #1b1b1e;
+    color: #39ff14;
+    box-shadow: 0 8px 24px 0 #39ff14;
   }
 
 
   .btn:active,
   .btn:focus{  
     background-color: #102770;
-    color: #ffeba7;
+    color: #39ff14;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
 
 
   .btn:hover{  
-    background-color: #102770;
-    color: #ffeba7;
+    background-color: #39ff14;
+    color: #1b1b1e;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
 
